# p2vec

./: .gitignore  Cargo.toml  README.md
.cargo/: cargo.toml  config.toml
src/: chunk.rs  compression.rs  file.rs  file_util.rs  lib.rs  memory_mapped_file.rs  memory_util.rs  possilby_random_file.rs  random_file.rs  range_util.rs  region.rs  region_file_util.rs  region_key.rs  sequential_file.rs  specialized_file.rs  util.rs
