[package]
name = "p2vec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Utilites
once_cell = { version = "1.13.1", features = ["parking_lot"] } # For dynamic dyspatch tables
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] } # Enable faster backed for oncecell
dashmap = "5.4.0"
bitvec = "1.0.1"
ahash = "0.8.2"

# Compression
libdeflater = "0.11.0" # For defalte based compression
flate2 = { version = "1.0.25", features = ["zlib"], default-features = false } # System zlib for streaming data. Slower but used as a fallback in case we can't use libdeflate. Doesn't take up much space because it uses the system zlib

# Encryption
openssl = "0.10.45" # System openssl for encryption. Well respected and it a common system libary.

# File system
memmap2 = "0.5.8" # For memory mapping files
fs3 = "0.5.0" # For file locking
close-file = "0.1.0"