[package]
name = "p2vec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Utilites
once_cell = { version = "1.17.1", features = ["parking_lot"] } # For dynamic dyspatch tables
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] } # Enable faster backed for oncecell
hashbrown = { version = "0.12.3", features = ["inline-more"] }
dashmap = "5.4.0"
ahash = "0.7.6"
libc = "0.2.140" # for low level utils
smallvec = { version = "1.10.0", features = ["write", "union", "const_generics", "const_new"] }
glidesort = "0.1.2"
glam = { version = "0.23.0", features = ["core-simd"] }

# Compression
libdeflater = "0.13.0" # For defalte based compression
flate2 = { version = "1.0.25", features = ["zlib"], default-features = false } # System zlib for streaming data. Slower but used as a fallback in case we can't use libdeflate. Doesn't take up much space because it uses the system zlib

# Encryption
openssl = "0.10.49" # System openssl for encryption. Well respected and it a common system libary.

# File system
memmap2 = "0.5.10" # For memory mapping files
fs3 = "0.5.0" # For file locking
close-err = "1.0.2"
positioned-io = "0.3.1"

[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
io-uring = { version = "0.5.13", features = ["unstable"] }

[lib]
#crate_type = ["dylib"]

[profile.release]
lto = true
#strip = true
panic = "abort"
codegen-units = 1
